bk_ida/gccida/g2/insn_extract
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1013:6: error: use of undeclared identifier 'v537'
rtx *v537; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1018:6: error: use of undeclared identifier 'v542'
rtx *v542; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1021:6: error: use of undeclared identifier 'v545'
rtx *v545; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1026:6: error: use of undeclared identifier 'v550'
rtx *v550; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1028:6: error: use of undeclared identifier 'v552'
rtx *v552; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1033:6: error: use of undeclared identifier 'v557'
rtx *v557; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1036:6: error: use of undeclared identifier 'v560'
rtx *v560; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1041:6: error: use of undeclared identifier 'v565'
rtx *v565; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1045:4: error: expected ';' after expression
rtx v569; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1045:5: error: use of undeclared identifier 'v569'
rtx v569; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1049:6: error: use of undeclared identifier 'v573'
rtx *v573; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1055:6: error: use of undeclared identifier 'v579'
rtx *v579; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1057:4: error: expected ';' after expression
rtx v581; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1057:5: error: use of undeclared identifier 'v581'
rtx v581; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1060:6: error: use of undeclared identifier 'v584'
rtx *v584; // rsi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1062:6: error: use of undeclared identifier 'v586'
rtx *v586; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1067:6: error: use of undeclared identifier 'v591'
rtx *v591; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1069:4: error: expected ';' after expression
rtx v593; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/insn-extract.c:1069:5: error: use of undeclared identifier 'v593'
rtx v593; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_extract/src/obj/insn-extract.o] Error 1
